--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Web Page Design</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css"/> 
+  <link rel="stylesheet" type="text/css" href="css/mystyle.css"/> 
 </head>
 
 <body>
